# konejo

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: chat.rs  mod.rs  recording.rs  settings.rs  workspace.rs
src-tauri/src/db/: mod.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/rag/: chunker.rs  mod.rs  prompts.rs
src-tauri/src/transcription/: mod.rs
src/components/AIResponseBlock/: index.tsx
src/components/BlockNoteEditor/: index.tsx
src/components/ChatComposer/: index.tsx
src/components/Editor/: index.tsx
src/components/Navigation/: index.tsx
src/components/ProcessingOverlay/: index.tsx
src/components/ProcessingScreen/: index.tsx
src/components/RecordingModal/: index.tsx
src/hooks/: useChat.ts  useTauriEvent.ts
src/lib/: tauri.ts  utils.ts
src/mock/: index.ts
src/pages/Documents/: index.tsx
src/pages/Home/: index.tsx
src/pages/Onboarding/: index.tsx
src/pages/Prompts/: index.tsx
src/pages/Settings/: index.tsx
src/pages/Workspace/: index.tsx
src/pages/Workspaces/: index.tsx
src/services/: mock.ts
src/store/: appStore.ts  chatStore.ts  promptStore.ts  workspaceStore.ts
src/types/: index.ts
