[package]
name = "konejo"
version = "0.1.0"
description = "Konejo – AI Meeting Assistant local-first"
authors = ["Konejo"]
edition = "2021"

[lib]
name = "konejo_lib"
# staticlib sólo es necesario para iOS mobile — en Windows desktop basta cdylib + rlib.
# Quitar staticlib evita que el linker MSVC vea símbolos duplicados de ggml
# (tanto whisper-rs-sys como llama-cpp-sys-2 compilan su propio ggml).
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "konejo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ──────────────────────────────────────────────────────────────
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-store    = "2"
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-fs       = "2"
tauri-plugin-log      = "2"

# ── LLM – llama.cpp bindings ─────────────────────────────────────────────────
# https://crates.io/crates/llama-cpp-2  versión real: 0.1.x
llama-cpp-2 = { version = "0.1", default-features = false, features = ["openmp"] }

# ── Transcripción – whisper.cpp bindings ─────────────────────────────────────
# https://crates.io/crates/whisper-rs  versión real: 0.16.x
# Intel SYCL (para Intel Arc iGPU) disponible como feature "intel-sycl"
whisper-rs = { version = "0.16", default-features = false, features = [] }

# ── Embeddings – fastembed con ONNX Runtime ──────────────────────────────────
# https://crates.io/crates/fastembed  versión real: 5.x
# default features incluyen ort-download-binaries-native-tls
fastembed = { version = "5", default-features = true }

# ── Base de datos ─────────────────────────────────────────────────────────────
rusqlite = { version = "0.39", features = ["bundled"] }

# ── Audio ─────────────────────────────────────────────────────────────────────
cpal  = "0.17"
hound = "3.5"

# ── HTTP / downloads ──────────────────────────────────────────────────────────
reqwest      = { version = "0.13", features = ["stream", "json"] }
futures-util = "0.3"

# ── Async ─────────────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Serde / JSON ──────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilidades ────────────────────────────────────────────────────────────────
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
anyhow    = "1"
thiserror = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Exportación ───────────────────────────────────────────────────────────────
docx-rs    = "0.4"
printpdf   = "0.9"

# ── Canales entre hilos ───────────────────────────────────────────────────────
crossbeam-channel = "0.5"

# ── Paths del sistema ─────────────────────────────────────────────────────────
dirs = "6"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
opt-level = 1

[features]
default = []
# Vulkan – Intel Arc iGPU: cargo build --release --features vulkan
vulkan = ["llama-cpp-2/vulkan"]
# Intel SYCL – Whisper acelerado en Intel Arc: cargo build --release --features sycl
sycl = ["whisper-rs/intel-sycl"]
